--- a/BlazorApp1/Client/CustomComponents/Buttons/DeleteButtonComponent.razor
+++ b/BlazorApp1/Client/CustomComponents/Buttons/DeleteButtonComponent.razor
@@ -3,7 +3,7 @@
 
 <ButtonComponent Caption="@(Caption ?? "Delete")"
                  Color="@(Color ?? "danger")"
-                 Icon="@(Icon ?? "trash-o")"
+                 Icon="@(Icon ?? "fa fa-trash")"
                  OnClick="OnClick"
                  ToolTipStr="@(ToolTipStr ?? "Delete")"
                  IsOutline="@IsOutline"
