--- a/BlazorApp1/Client/Pages/ButtonTest.razor
+++ b/BlazorApp1/Client/Pages/ButtonTest.razor
@@ -1,16 +1,38 @@
 ﻿@page "/buttonTest"
 
-<h3>ButtonTest</h3>
+<h3>@title</h3>
 
 <div class="form-group">
     <div class="container">
         <div class="btn-toolbar">
+            <CustomEditButtonComponent OnClick="changeTitle" />
+            <CustomEditButtonComponent Caption="Edit Caption" OnClick="showConfirmation" Color="danger" Icon="pencil" IsSmall="false" />
 
-            <AddNewButtonComponent Caption="hello"/>
+            <AddNewButtonComponent Caption="hello" />
         </div>
     </div>
 </div>
 
-@code {
+@code
+{
+    [CascadingParameter]
+    IModalService Modal { get; set; }
 
+    [Inject]
+    ModalManager ModalManager { get; set; }
+
+
+    private String title = "";
+
+    private async Task changeTitle()
+    {
+        await ModalManager.ShowMessageAsync("Show Message Title", "Record deleted", 3000);
+    }
+
+    async Task showConfirmation()
+    {
+        var res = await ModalManager.ConfirmationAsync("Confirmations", "Are you sure that it will be deleted?");
+
+        if (res) title = "Yes just clicked"; else title = "No just clicked";
+    }
 }
