--- a/BlazorApp1/Client/_Imports.razor
+++ b/BlazorApp1/Client/_Imports.razor
@@ -9,7 +9,25 @@
 @using BlazorApp1.Client
 @using BlazorApp1.Client.Shared
 
-@using BlazorApp1.Client.CustomCompanents.Buttons
+@using BlazorApp1.Client.CustomComponents.Buttons
 
 @using Blazored.Modal
 @using Blazored.Modal.Services
+
+@using BlazorApp1.Client.CustomComponents.ModalComponents
+
+@using BlazorApp1.Client.Utils;
+
+@using BlazorApp1.Shared.DTO
+@using BlazorApp1.Shared.ResponseModels
+
+@using Blazored.LocalStorage
+
+@using Microsoft.AspNetCore.Components.Authorization
+@using BlazorApp1.Shared.CustomExceptions
+@using BlazorApp1.Client.Pages.PageProcess
+
+@using BlazorApp1.Shared.Extensions
+@using Blazored.Typeahead
+@using BlazorApp1.Shared.FilterModels
+@using BlazorApp1.Client.CustomComponents
