--- a/BlazorApp1/Client/App.razor
+++ b/BlazorApp1/Client/App.razor
@@ -1,6 +1,18 @@
-﻿<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
+﻿<CascadingBlazoredModal>
+
+<Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+        @* <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" /> *@
+
+        <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+            <Authorizing>
+                <text>Please wait, we are authorizing the user</text>
+            </Authorizing>
+            <NotAuthorized>
+                <text>You are not authoried to acces this page</text>
+            </NotAuthorized>
+        </AuthorizeRouteView>
+
     </Found>
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
@@ -8,3 +20,5 @@
         </LayoutView>
     </NotFound>
 </Router>
+
+</CascadingBlazoredModal>
