--- a/BlazorApp1/Client/CustomComponents/Buttons/CustomEditButtonComponent.razor
+++ b/BlazorApp1/Client/CustomComponents/Buttons/CustomEditButtonComponent.razor
@@ -3,7 +3,7 @@
 
 <ButtonComponent Caption="@(Caption ?? "Edit")"
                  Color="@(Color ?? "secondary")"
-                 Icon="@(Icon ?? "pencil-square-o")"
+                 Icon="@(Icon ?? "fa fa-pencil")"
                  OnClick="OnClick"
                  ToolTipStr="@(ToolTipStr ?? "Edit")"
                  IsOutline="@IsOutline"
