--- a/BlazorApp1/Client/Pages/Counter.razor
+++ b/BlazorApp1/Client/Pages/Counter.razor
@@ -1,4 +1,5 @@
 ﻿@page "/counter"
+@inject Blazored.LocalStorage.ILocalStorageService localStorage
 
 <h1>Counter</h1>
 
@@ -9,8 +10,10 @@
 @code {
     private int currentCount = 0;
 
-    private void IncrementCount()
+    private async Task IncrementCount()
     {
         currentCount++;
+
+        await localStorage.SetItemAsync("counter", currentCount);
     }
 }
